...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:strokeColor="@color/black"
        app:strokeWidth="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/colored_bar7">

        <GridView
            android:id="@+id/homepage_gridView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnWidth="200dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:gravity="center"
...
